--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "setter",
+  "name": "sodoku-solver",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "author": "Sean Heffernan <seanmheff@gmail.com>",
   "license": "MIT",
   "dependencies": {
@@ -11,6 +11,11 @@
     "typescript": "^3.3.4000"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.11"
+    "@types/jest": "^24.0.11",
+    "tslint": "^5.15.0"
+  },
+  "scripts": {
+    "solve": "ts-node index.ts",
+    "test": "jest"
   }
 }
